Add code of labwork

--- a/index.html
+++ b/index.html
@@ -1,13 +1,86 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>  
+  <head>
     <meta charset="utf-8" />
     <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" /><![endif]-->
     <title>Лабораторная работа 5</title>
     <link rel="stylesheet" href="http://www.x3dom.org/download/x3dom.css" />
-    <script src="http://www.x3dom.org/download/x3dom.js"></script>
+    <script type='text/javascript' src='https://www.x3dom.org/x3dom/release/x3dom-full.js'></script>
   </head>
   <body>
-    <h1>Здесь только я. А должна быть твоя лаба!</h1>
-  </body> 
+    <x3d  width='1300px' height='580px'  >
+      <scene>
+
+          <transform>
+            <shape>
+              <appearance>
+              <material diffuseColor='#C0C0C0'> </material>
+              </appearance>
+              <box size='2 6 1'></box>
+            </shape>
+          </transform>
+          <transform>
+            <shape>
+              <appearance>
+              <material diffuseColor='#C0C0C0'> </material>
+              </appearance>
+              <box size='2 6 1'></box>
+            </shape>
+          </transform>
+          <transform  scale='0.7 0.7 0.1' translation='0 2 0.5'>
+            <shape>
+              <appearance>
+                <material DEF='red_material' diffuseColor="#000000"/>
+              </appearance>
+              <sphere/>
+            </shape>
+          </transform>
+          <transform  scale='0.7 0.7 0.1' translation='0 0 0.5'>
+            <shape>
+              <appearance>
+                <material DEF='yellow_material' diffuseColor="#000000"/>
+              </appearance>
+              <sphere/>
+            </shape>
+          </transform>
+          <transform  scale='0.7 0.7 0.1' translation='0 -2 0.5'>
+            <shape>
+              <appearance>
+                <material DEF='green_material' diffuseColor="#000000"/>
+              </appearance>
+              <sphere/>
+            </shape>
+          </transform>
+
+        <timesensor loop="true" cycleinterval="5" def="Time" enabled="true" first="true"></timesensor>
+
+        <colorinterpolator def="RedInt" keyvalue="1 0 0, 1 0 0,0 0 0,0 0 0, 0 0 0, 1 0 0"
+                            key="0 0.3 0.45 0.75  0.9  1"></colorinterpolator>
+        <route tofield="set_fraction" tonode="RedInt" fromfield="fraction_changed" fromnode="Time">
+        </route>
+        <route tofield="set_diffuseColor" tonode="red_material" fromfield="value_changed" fromnode="RedInt">
+        </route>
+
+        <colorinterpolator def="YellowInt" keyvalue="0 0 0, 1 1 0,0 0 0,1 1 0, 0 0 0, 0 0 0"
+                            key="0 0.3 0.45 0.75  0.9  1"></colorinterpolator>
+        <route tofield="set_fraction" tonode="YellowInt" fromfield="fraction_changed" fromnode="Time">
+        </route>
+        <route tofield="set_diffuseColor" tonode="yellow_material" fromfield="value_changed" fromnode="YellowInt">
+        </route>
+
+        <colorinterpolator def="GreenInt" keyvalue="0 0 0, 0 0 0,0 1 0,0 0 0, 0 0 0, 0 0 0"
+                            key="0 0.3 0.45 0.75  0.9  1"></colorinterpolator>
+        <route tofield="set_fraction" tonode="GreenInt" fromfield="fraction_changed" fromnode="Time">
+        </route>
+        <route tofield="set_diffuseColor" tonode="green_material" fromfield="value_changed" fromnode="GreenInt">
+        </route>
+
+
+
+
+
+
+      </scene>
+    </x3d>
+  </body>
 </html>
