--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 	<head>
 		<title>???????????? ?5</title>
-		<link rel="stylesheet" type="text/css" href="http://x3dom.org/download/dev/x3dom.css"></link>
-		<script type="text/javascript" src="http://x3dom.org/download/dev/x3dom-full.js"></script>
+		<link rel="stylesheet" type="text/css" href="https://x3dom.org/download/dev/x3dom.css"></link>
+		<script type="text/javascript" src="https://x3dom.org/download/dev/x3dom-full.js"></script>
 		
 	</head>
 	<body>
