--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <html>
 	<head>
-		<title>???????????? ?5</title>
+		<title>Лабораторная №5</title>
 		<link rel="stylesheet" type="text/css" href="https://x3dom.org/download/dev/x3dom.css"></link>
 		<script type="text/javascript" src="https://x3dom.org/download/dev/x3dom-full.js"></script>
 		
@@ -46,13 +46,13 @@
 		</transform>
 	</transform>	
 	<transform rotation='0 1 0 3.14' scale='1 1 0' translation='0 0 -0.2' >
-		<transform DEF="gear00" ><shape USE="gear"></Shape></transform>		
+		<transform DEF="gear00" ><shape USE="gear"></shape></transform>		
 	</transform>
 	<transform rotation='0 1 0 3.14' scale='1.4 1.4 0' translation='0.5 0.5 0.202' >
-		<transform DEF="gear1" ><shape USE="gear"></Shape></transform>		
+		<transform DEF="gear1" ><shape USE="gear"></shape></transform>		
 	</transform>
 	<transform rotation='0 0 0 0' scale='1.96 1.96 0' translation='-0.4 1.0 0.204' >
-		<transform DEF="gear2" ><shape USE="gear"></Shape></transform>		
+		<transform DEF="gear2" ><shape USE="gear"></shape></transform>		
 	</transform>		
 	
 	<!-- ????????? -->
@@ -66,26 +66,26 @@
 		
 		<transform DEF="arrow" translation='0 0 0.1'>
 		<transform  rotation='1 0 0 1.57' scale='0.2 0.2 0.2' translation='0 0 0' DEF="one_arrow">
-		<Shape >
+		<shape >
 			<appearance><material diffuseColor='#7b3f00'></material></appearance>
 				<IndexedFaceSet ccw="true" colorPerVertex="false" convex="true"
 			creaseAngle="0" normalPerVertex="true" solid="false" coordIndex="0 1 2 3">
 			<Coordinate point="0 0 0, -0.3 0 -1, 0 0 -5, 0.3 0 -1"></Coordinate>
 			</IndexedFaceSet>
-		</Shape>
+		</shape>
 		</transform>
 		</transform>
 		
 		<transform DEF="arrow_minute" translation='0 0 0.1'>
-		<transform  rotation='0 0 0 0' scale='1.5 1.5 1.5' translation='0 0 0' ><Shape USE="one_arrow"></Shape></transform>
+		<transform  rotation='0 0 0 0' scale='1.5 1.5 1.5' translation='0 0 0' ><shape USE="one_arrow"></shape></transform>
 		</transform>
 		
 		<transform DEF="decore">
 		<transform  rotation='1 0 0 1.57' scale='1 1 1' translation='0 0 0.05'>
-		<Shape >
+		<shape >
 			<appearance><material diffuseColor='#eee' DEF="decore_color"></material></appearance>
 			<cylinder radius="0.2" height="0"></cylinder>
-		</Shape>
+		</shape>
 		</transform>
 		</transform>
 		
@@ -121,11 +121,11 @@
 	
 	
 	<TimeSensor DEF='Time_decor' cycleInterval='20' loop='true'></TimeSensor>
-	<PositionInterpolator DEF='decor_position' key='0 0.25 0.5 0.75 1' keyValue='-1 0 0, 0 1 0, 1 0 0, 0 -1 0, -1 0 0, '>
+	<PositionInterpolator DEF='decor_position' key='0 0.25 0.5 0.75 1' keyValue='-1 0 0, 0 1 0, 1 0 0, 0 -1 0, -1 0 0, ' />
 	<ROUTE fromNode='Time_decor' toNode='decor_position' fromField='fraction_changed' toField='set_fraction'></ROUTE>
 	<ROUTE fromNode='decor_position' toNode='decore' fromField='value_changed'  toField='translation'></ROUTE>
 	
-	<ColorInterpolator DEF='ColInt' key='0 0.25 0.5 0.75 1' keyValue='1 0 0, 0 1 0, 0 0 1, 1 0 0, 1 0 1'>
+	<ColorInterpolator DEF='ColInt' key='0 0.25 0.5 0.75 1' keyValue='1 0 0, 0 1 0, 0 0 1, 1 0 0, 1 0 1' />
 	<ROUTE fromNode='Time_decor' toNode='ColInt' fromField='fraction_changed' toField='set_fraction'></ROUTE>
 	<ROUTE fromNode='ColInt' toNode='decore_color' fromField='value_changed'  toField='set_diffuseColor'></ROUTE>
 	
