--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" /><![endif]-->
     <title>Лабораторная работа 5</title>
     <link rel="stylesheet" href="http://www.x3dom.org/download/x3dom.css" />
-    <script type='text/javascript' src='https://www.x3dom.org/x3dom/release/x3dom-full.js'></script>
+    <script type='text/javascript' src='https://www.x3dom.org/x3dom/release/x3dom.js'></script>
   </head>
   <body>
     <x3d  width='1300px' height='580px'  >
