--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 			<OrientationInterpolator DEF='OrientInt1' key='0 0.5 1' keyValue='0 0 1  -2.75, 0 0 1 6.28,0 0 1 -2.75'></OrientationInterpolator>
 			
 			<TimeSensor DEF='Time' cycleInterval='10' loop='true' enabled='true'></TimeSensor>
-			<PositionInterpolator DEF='PosInt' key='0 0.1 0.3 0.4 0.5 0.6 0.7 'keyValue=' -1 0 0, 5 0 0, 5 0 5, 5 0 5, -5 0 5, -5 0 0, -1 0 0'>	</PositionInterpolator> 
-			<PositionInterpolator DEF='PosInt1' key='0 0.1 0.3 0.4 0.5 0.6 0.7 'keyValue=' 1 0 0, -5 0 0, -5 0 -5, -5 0 -5, 5 0 -5, 5 0 0, 1 0 0'> </PositionInterpolator> 
+			<PositionInterpolator DEF='PosInt' key='0 0.1 0.3 0.4 0.5 0.6 0.7' keyValue=' -1 0 0, 5 0 0, 5 0 5, 5 0 5, -5 0 5, -5 0 0, -1 0 0'>	</PositionInterpolator> 
+			<PositionInterpolator DEF='PosInt1' key='0 0.1 0.3 0.4 0.5 0.6 0.7' keyValue=' 1 0 0, -5 0 0, -5 0 -5, -5 0 -5, 5 0 -5, 5 0 0, 1 0 0'> </PositionInterpolator> 
 					
 			<Background skyColor='0.000 0.000 0.000'></Background>
 			
@@ -81,7 +81,7 @@
 		 
 			
 		 
-				<Transform 	DEF="torus1" rotation="1 1 0 -1.4" translation="2 0.7 0", scale="0.2 0.2 0.2">
+				<Transform 	DEF="torus1" rotation="1 1 0 -1.4" translation="2 0.7 0"  scale="0.2 0.2 0.2">
 					<Inline url="1.x3d"> </Inline>
 				</Transform>
 			<Transform DEF="Trans1" translation="-1  0  0">	
@@ -96,7 +96,7 @@
 
 			
 			 
-				<ViewPoint fieldOfView='0.9' position="0 1 10"" orientation="1 0 0 0.2"> </ViewPoint>
+				<ViewPoint fieldOfView='0.9' position="0 1 10" orientation="1 0 0 0.2"> </ViewPoint>
 				<NavigationInfo avatarSize="10 10 10" speed ="5" visibilityLimit="10" headlight="fasle" type="FLY"></NavigationInfo>
 			
 
